--- a/static/styles/scss/_forms.scss
+++ b/static/styles/scss/_forms.scss
@@ -1,3 +1,7 @@
+form{
+    transition: opacity 500ms ease-out;
+}
+
 textarea{
     resize:vertical;
     font-family:inherit;
@@ -66,4 +70,34 @@ input{
     width: 1.2em;
     height: 1em;
     padding: 0.5em;
+}
+
+.form-alert{
+    width:100%;
+}
+
+.form-success{
+    color:$success;
+    text-align:center;
+    vertical-align:middle;
+    &::before{
+        font-family:"Font Awesome 5 Free";
+        color:inherit;
+        font-weight: 900;
+        vertical-align:middle;
+        content:"\f00c \0020";
+    }
+}
+
+.form-error{
+    color:$error;
+    text-align:center;
+    vertical-align:middle;
+    &::before{
+        font-family:"Font Awesome 5 Free";
+        color:inherit;
+        font-weight: 900;
+        vertical-align:middle;
+        content:"\f00d \0020";
+    }
 }
