--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -9,6 +9,9 @@ $grey: #6b6d74;
 $dark-grey: #383a42;
 $very-dark-grey: #1d1e21;
 
+$success: #7ed321;
+$error: #ff3466;
+
 /* Typography */
 
 /* breakpoints */
