--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,6 +1,12 @@
 {% extends "app/base.html" %}
 {% load static %}
 
+{% block scripts %}
+    {{ block.super }}
+    <!-- HOME JS -->
+    <script src="{% static 'js/home.js' %}"></script>
+{% endblock scripts %}
+
 {% block content %}
 <!-- START PAGE 1 -->
 <div class="page full-height col-2 col-1-sm" id="page1">
