--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -1,7 +1,13 @@
 {% extends "app/base.html" %}
 {% load static %}
+
+{% block scripts %}
+    {{ block.super }}
+    <script src="{% static 'js/blog_list.js' %}"></script>
+{% endblock scripts %}
+
 {% block content %}
-<div class="blog-header-container page page-padded flex-y">
+<div class="blog-list-header-container page page-padded flex-y">
     <div class="blog-header w-100 m-t-xxl m-b-xxl">
         <div class="center-content-y center-content-xy-sm">
             <div class="text-center-sm">
@@ -14,13 +20,9 @@
                     <h3 class="no-m">{{ blogs.0.title }}</h3>
                     <p class="m-b-md">{{ blogs.0.description|truncatechars:100 }}</p>
                     <div class="space-evenly">
-                        {% if not blogs.0.author.first_name %}
-                            <small><i class="fa fa-user"></i> {{ blogs.0.author }}</small>
-                        {% else %}
-                            <small><i class="fa fa-user"></i> {{ blogs.0.author.first_name }} {{ blogs.0.author.last_name }}</small>
-                        {% endif %}
+                        <small><i class="fa fa-user"></i> {{ blogs.0.author_name }}</small>
                         {% if blogs.0.published %}
-                            <small><i class="fa fa-calendar"></i> {{ blogs.0.published_on }}</small>
+                            <small><i class="fa fa-calendar"></i> {{ blogs.0.published_on|date:"M. j, Y" }}</small>
                         {% else %}
                             <small><i class="fa fa-pencil-ruler"></i> Draft. updated: {{ blogs.0.updated }}</small>
                         {% endif %}
@@ -38,7 +40,7 @@
                         <p class="color-white m-b-md">Topics:</p>
                         <ul class="tag-list">
                             {% for tag in tags %}
-                                <a href="{% url 'blog-list' %}?tag={{tag.name}}"><li><small class="color-white">{{ tag.name }}</small></li></a>
+                                <li id="tag-{{ tag.id }}" data-identifier="{{ tag.id }}"><small class="color-white">{{ tag.name }}</small></li>
                             {% endfor %}
                         </ul>
                     </div>
@@ -47,7 +49,7 @@
         </div>
     </div>
 </div>
-<div class="page blog-list col-3 col-2-mdlg col-1-sm m-t-xxl">
+<div class="page blog-list col-3 col-2-mdlg col-1-sm m-t-xxl" id="blog-card-list">
     {% for blog in blogs %}
         <a class="text-muted" href="{% url 'blog-detail' blog.slug %}">
             <div class="blog-card flex-x">
@@ -56,103 +58,20 @@
                     <img class="blog-card-img" src="{{ blog.thumbnail.url }}"/>
                 </div>
                 <div class="blog-card-text-container">
-                    <h3>{{ blog.title }}</h3>
+                    <h4>{{ blog.title }}</h4>
                     <p><small>{{ blog.description|truncatechars:100 }} </small></p>
                     <div class="space-evenly">
-                        {% if not blogs.0.author.first_name %}
-                            <small><i class="fa fa-user"></i> {{ blogs.0.author|truncatechars:13 }}</small>
-                        {% else %}
-                            <small><i class="fa fa-user"></i> {{ blogs.0.author.first_name }} {{ blogs.0.author.last_name }}</small>
-                        {% endif %}
-                        {% if blogs.0.published %}
-                            <small><i class="fa fa-calendar"></i> {{ blogs.0.published_on }}</small>
+                        <small><i class="fa fa-user"></i> {{ blog.author_name|truncatechars:13 }}</small>
+                        {% if blog.published %}
+                            <small><i class="fa fa-calendar"></i> {{ blog.published_on|date:"M. j, Y" }}</small>
                         {% else %}
                             <small><i class="fa fa-pencil-ruler"></i> Draft.</small>
                         {% endif %}
-                        <small><i class="fa fa-clock"></i> {{ blogs.0.read_time }} min. read</small>
+                        <small><i class="fa fa-clock"></i> {{ blog.read_time }} min. read</small>
                     </div>
                 </div>
             </div>
         </a>
     {% endfor %}
-
-    <a class="text-muted" href="{% url 'blog-detail' blogs.0.slug %}">
-        <div class="blog-card flex-x">
-            <div class="blog-card-img-container center-content-xy">
-                <div class="blog-card-img-overlay"></div>
-                <img class="blog-card-img" src="{% static 'img/kirkron-logo.svg' %}"/>
-            </div>
-            <div class="blog-card-text-container">
-                <h3>Blog 1</h3>
-                <p><small>Subheading Subheading Subheadingading Subheading Subheading Subheading Subheading Subheading Subheading Subheading Subheading Subheading </small></p>
-                <div class="space-evenly">
-                    <small><i class="fa fa-user"></i> Scott James</small>
-                    <small><i class="fa fa-calendar"></i> Date</small>
-                    <small><i class="fa fa-clock"></i> 4 min. read</small>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <div class="blog-card flex-x">
-        <div class="blog-card-img-container center-content-xy">
-            <div class="blog-card-img-overlay"></div>
-            <img class="blog-card-img" src="{% static 'img/postgres-logo.svg' %}"/>
-        </div>
-        <div class="blog-card-text-container">
-            <h3>Blog 1</h3>
-            <p>Subheading</p>
-            <div class="space-evenly">
-                <small><i class="fa fa-user"></i> Scott James</small>
-                <small><i class="fa fa-calendar"></i> Date</small>
-                <small><i class="fa fa-clock"></i> 4 min. read</small>
-            </div>
-        </div>
-    </div>
-    <div class="blog-card flex-x">
-        <div class="blog-card-img-container center-content-xy">
-            <div class="blog-card-img-overlay"></div>
-            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
-        </div>
-        <div class="blog-card-text-container">
-            <h3>Blog 1</h3>
-            <p>Subheading</p>
-            <div class="space-evenly">
-                <small><i class="fa fa-user"></i> Scott James</small>
-                <small><i class="fa fa-calendar"></i> Date</small>
-                <small><i class="fa fa-clock"></i> 4 min. read</small>
-            </div>
-        </div>
-    </div>
-    <div class="blog-card flex-x">
-        <div class="blog-card-img-container center-content-xy">
-            <div class="blog-card-img-overlay"></div>
-            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
-        </div>
-        <div class="blog-card-text-container">
-            <h3>Blog 1</h3>
-            <p>Subheading</p>
-            <div class="space-evenly">
-                <small><i class="fa fa-user"></i> Scott James</small>
-                <small><i class="fa fa-calendar"></i> Date</small>
-                <small><i class="fa fa-clock"></i> 4 min. read</small>
-            </div>
-        </div>
-    </div>
-    <div class="blog-card flex-x">
-        <div class="blog-card-img-container center-content-xy">
-            <div class="blog-card-img-overlay"></div>
-            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
-        </div>
-        <div class="blog-card-text-container">
-            <h3>Blog 1</h3>
-            <p>Subheading</p>
-            <div class="space-evenly">
-                <small><i class="fa fa-user"></i> Scott James</small>
-                <small><i class="fa fa-calendar"></i> Date</small>
-                <small><i class="fa fa-clock"></i> 4 min. read</small>
-            </div>
-        </div>
-    </div>
 </div>
 {% endblock content %}
