--- a/static/styles/scss/_base.scss
+++ b/static/styles/scss/_base.scss
@@ -138,6 +138,9 @@ body{
    }
 }
 
+.span3{
+   grid-column: span 3; 
+}
 
 
 //FLEX COMPONENTS
@@ -165,6 +168,11 @@ body{
 .center-content-y{
    display:flex;
    align-items:center;
+}
+
+.flex-end-content-y{
+   display:flex;
+   align-items:flex-end;
 }
 
 .center-content-x-md{
@@ -426,8 +434,21 @@ img{
 
 }
 
+.tag-list li:hover{
+   cursor:pointer;
+}
+
+.tag-list li.active{
+   opacity:1;
+}
+
+.tag-list-active li{
+   opacity:0.75;
+}
+
 .loading{
    position:relative;
+   opacity:0.5;
 
    &::before{
       content: '';
@@ -438,8 +459,6 @@ img{
       width:110%;
       height:110%;
       border-radius:5px;
-      background-color:rgba(0,0,0,.2);
-      box-shadow:0px 0px 15px rgba(0,0,0,.2);
    }
 }
 
