--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -107,3 +107,9 @@ a{
          text-align:center;
      }
  }
+
+.large-error{
+     font-size: 11rem;
+     margin-bottom:$space-xl;
+     margin-top:0px;
+ }
