--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -4,6 +4,15 @@
     <head>
 
         {% block scripts %}
+            <!-- FAVICON -->
+            <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+            <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
+            <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+            <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+            <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+            <meta name="msapplication-TileColor" content="#da532c">
+            <meta name="theme-color" content="#ffffff">
+
             <!-- CUSTOM STYLES -->
             <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
 
@@ -45,7 +54,7 @@
                     </div>
                     <div id="menu-toggle">
                         <div class="hamburger">
-                            <div class="menu" onclick="setMenu(this);">
+                            <div class="menu" id="hamburger">
                                 <div class="menu_line menu_line-q"></div>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 80 80">
                                     <path class="path-a" d="M 24 26 h 36 a 14 14 0 0 1 -6 28 l -28 -28" />
