--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -15,6 +15,7 @@
             </div>
         </div>
         <div class="col-2 col-1-sm m-t-xl">
+            {% if blogs|length > 0 %}
             <a href="{% url 'blog-detail' blogs.0.slug %}">
                 <div class="blog-highlight color-white w-100 no-p m-b-xl">
                     <h3 class="no-m">{{ blogs.0.title }}</h3>
@@ -30,6 +31,7 @@
                     </div>
                 </div>
             </a>
+            {% endif %}
             <div class="w-100 no-p m-b-xl">
                 <div>
                     <div class="input-container no-m m-b-lg">
