--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -130,7 +130,7 @@ body {
 @media (max-width: 576px) {
   .col-1-sm {
     grid-template-columns: 1fr;
-    grid-auto-rows: max-content;
+    grid-template-rows: auto;
   }
 }
 
@@ -635,6 +635,12 @@ a {
   }
 }
 
+.large-error {
+  font-size: 11rem;
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
 form {
   transition: opacity 500ms ease-out;
 }
@@ -1040,6 +1046,7 @@ input {
 
 .blog-list {
   grid-column-gap: 7.5%;
+  transition: opacity 500ms ease-out;
 }
 
 @media (max-width: 699px) {
@@ -1056,6 +1063,7 @@ input {
 .blog-card {
   margin-bottom: 7%;
   overflow: hidden;
+  min-height: 150px;
 }
 
 .blog-card:hover .blog-card-img-overlay {
@@ -1066,11 +1074,13 @@ input {
   position: relative;
   overflow: hidden;
   width: 30%;
+  min-height: 150px;
 }
 
 .blog-card-img {
   position: absolute;
   object-fit: cover;
+  height: 50px;
   min-width: 100%;
   min-height: 100%;
 }
