--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -4,6 +4,7 @@ $white: #fcfcfc;
 $pink: #ed2f8b;
 $yellow: #ffcf7b;
 $accent: #111;
+$very-light-grey: #F2F2F2;
 $light-grey: #aeb2bf;
 $grey: #6b6d74;
 $dark-grey: #383a42;
