--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -394,3 +394,15 @@
     bottom:-1px;
     transform: rotate(180deg);
  }
+
+ .blog-content-container{
+    
+ }
+
+ .blog-content{
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    background-color:$white;
+    word-wrap:break-word;
+    margin-top:$space-lg;
+    margin-bottom:$space-lg;
+ }
