--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -310,7 +310,19 @@ body {
   width: 100%;
 }
 
+@media (max-width: 918px) {
+  .w-100-mdlg {
+    width: 100%;
+  }
+}
+
 @media (max-width: 699px) {
+  .w-100-md {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
   .w-100-sm {
     width: 100%;
   }
@@ -516,6 +528,11 @@ img {
     border-right-color: #ffcf7b;
   }
 }
+.blog-content ul {
+  list-style-image: url("../img/ul-arrow.svg");
+  list-style-type: circle;
+}
+
 body {
   font-family: "raleway", "roboto", sans-serif;
   color: #383a42;
@@ -598,6 +615,27 @@ hr {
 a {
   color: #1e83d6;
   text-decoration: none;
+}
+
+pre {
+  background-color: #F2F2F2;
+  padding: 15px;
+  border-top-right-radius: 15px;
+  border-image-slice: 1;
+  border-width: 1px;
+  border-bottom: 1px solid;
+  border-left: 1px solid;
+  border-image-source: linear-gradient(to left, #ffcf7b, #ed2f8b);
+}
+blockquote {
+  background-color: white;
+  color: #6b6d74;
+  margin: 0;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-top: 0.05em;
+  padding-bottom: 0.05em;
+  border-left: 0.5em #6b6d74 solid;
 }
 
 .text-muted {
@@ -1155,6 +1193,14 @@ input {
   left: 0px;
   bottom: -1px;
   transform: rotate(180deg);
+}
+
+.blog-content {
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+  background-color: #fcfcfc;
+  word-wrap: break-word;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 :root {
