--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -170,6 +170,20 @@ body {
   flex-direction: row;
 }
 
+@media (max-width: 576px) {
+  .flex-y-sm {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 576px) {
+  .flex-x-sm {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
 .space-evenly {
   display: flex;
   justify-content: space-between;
@@ -300,6 +314,12 @@ body {
   padding-right: 2.5%;
 }
 
+.w-65 {
+  width: calc(65% - (2.5% * 2));
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+}
+
 .w-70 {
   width: calc(70% - (2.5% * 2));
   padding-left: 2.5%;
@@ -374,6 +394,26 @@ body {
 
 .m-b-xxl {
   margin-bottom: 50px;
+}
+
+.p-sm {
+  padding: 5px;
+}
+
+.p-md {
+  padding: 10px;
+}
+
+.p-lg {
+  padding: 15px;
+}
+
+.p-xl {
+  padding: 20px;
+}
+
+.p-xxl {
+  padding: 50px;
 }
 
 .p-t-xxl {
@@ -618,7 +658,7 @@ a {
 }
 
 pre {
-  background-color: #F2F2F2;
+  background-color: white;
   padding: 15px;
   border-top-right-radius: 15px;
   border-image-slice: 1;
@@ -626,7 +666,9 @@ pre {
   border-bottom: 1px solid;
   border-left: 1px solid;
   border-image-source: linear-gradient(to left, #ffcf7b, #ed2f8b);
+  overflow: scroll;
 }
+
 blockquote {
   background-color: white;
   color: #6b6d74;
@@ -1154,19 +1196,33 @@ input {
   text-align: center;
 }
 
-@media (max-width: 699px) {
-  .blog-author {
-    order: 1;
-    margin-top: 50px;
-  }
-}
-
 .blog-header {
   grid-column-gap: 3.4rem;
 }
 
 .blog-author-img-container {
-  width: 3.4rem;
+  width: 6rem;
+}
+
+.blog-details-container {
+  padding-left: 0px;
+}
+@media (max-width: 699px) {
+  .blog-details-container {
+    order: 1;
+  }
+}
+
+.blog-details {
+  padding-left: 1rem;
+}
+
+.blog-details div {
+  padding: 0.3rem;
+}
+
+.tag-list-container {
+  padding-top: 0.3rem;
 }
 
 .blog-banner {
@@ -1174,6 +1230,7 @@ input {
 }
 
 .blog-banner-img {
+  min-height: 200px;
   position: relative;
   background-image: linear-gradient(to bottom right, #ed2f8b, #ffcf7b);
 }
@@ -1196,11 +1253,65 @@ input {
 }
 
 .blog-content {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
   background-color: #fcfcfc;
   word-wrap: break-word;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.blog-content a:hover {
+  text-decoration: underline;
+}
+
+.blog-content p {
+  line-height: 1.7rem;
+}
+
+.blog-content h2 {
+  margin-block-start: 1em;
+  margin-block-end: 0.5em;
+}
+
+.blog-content ul li {
+  margin-top: 30px;
+  padding-left: 1.6rem;
+}
+
+.blog-content ol li {
+  position: relative;
+  margin-top: 30px;
+  padding-left: 1rem;
+  clear: both;
+  list-style: none;
+  counter-increment: inst;
+}
+
+.blog-content ol li::before {
+  content: counter(inst);
+  position: absolute;
+  background-image: linear-gradient(to bottom right, #ed2f8b, #ffcf7b);
+  color: #fcfcfc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1rem;
+  width: 1rem;
+  top: -0.3rem;
+  left: -2.6rem;
+  padding: 0.6rem 0.6rem;
+  border-radius: 50%;
+  font-size: 1rem;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-in-out;
+}
+
+.blog-content img {
+  width: 100%;
 }
 
 :root {
