--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -12,8 +12,11 @@ $very-dark-grey: #1d1e21;
 
 $success: #7ed321;
 $error: #ff3466;
+$info: #1e83d6;
+$warn: #d6d31e;
 
 /* Typography */
+$a-color: #1e83d6;
 
 /* breakpoints */
 $screen-sm:576px;
