--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -812,6 +812,32 @@ input {
   content: " ";
 }
 
+.form-info {
+  color: #1e83d6;
+  text-align: center;
+  vertical-align: middle;
+}
+.form-info::before {
+  font-family: "Font Awesome 5 Free";
+  color: inherit;
+  font-weight: 900;
+  vertical-align: middle;
+  content: " ";
+}
+
+.form-warn {
+  color: #d6d31e;
+  text-align: center;
+  vertical-align: middle;
+}
+.form-warn::before {
+  font-family: "Font Awesome 5 Free";
+  color: inherit;
+  font-weight: 900;
+  vertical-align: middle;
+  content: " ";
+}
+
 .form-error {
   color: #ff3466;
   text-align: center;
