Added html email templates for automated emails

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -95,7 +95,7 @@
             </div>
         {% if forloop.last %}
             <div class="project-image" id="project-{{ forloop.counter }}-image">
-                <img class="project-img" src="{% static 'img/tpPortal-phone.png' %}"/>
+                <img class="project-img" src="{% static 'img/byite-logo-color.svg' %}"/>
             </div>
         {% endif %}
     {% endfor %}
