--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -89,6 +89,8 @@ blockquote{
     background-color:white;
     color: $grey;
     margin: 0;
+    margin-top:1.5em;
+    margin-bottom:1.5em;
     padding-left: 1.5em;
     padding-right: 1.5em;
     padding-top: .05em;
