--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -673,6 +673,8 @@ blockquote {
   background-color: white;
   color: #6b6d74;
   margin: 0;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
   padding-left: 1.5em;
   padding-right: 1.5em;
   padding-top: 0.05em;
@@ -1303,21 +1305,34 @@ input {
   margin-block-end: 0.5em;
 }
 
-.blog-content ul li {
-  margin-top: 30px;
+.blog-content ul {
+  list-style-image: url("../img/ul-arrow.svg");
+  list-style-type: circle;
+}
+
+.blog-content ul > li {
+  margin-top: 1.8rem;
   padding-left: 1.6rem;
 }
 
-.blog-content ol li {
+.blog-content ol {
+  counter-reset: inst;
+}
+
+.blog-content ol > li {
   position: relative;
-  margin-top: 30px;
+  margin-top: 1.8rem;
   padding-left: 1rem;
   clear: both;
   list-style: none;
   counter-increment: inst;
 }
 
-.blog-content ol li::before {
+.blog-content > ol > li {
+  margin-top: 5rem;
+}
+
+.blog-content ol > li::before {
   content: counter(inst);
   position: absolute;
   background-image: linear-gradient(to bottom right, #ed2f8b, #ffcf7b);
@@ -1327,7 +1342,7 @@ input {
   justify-content: center;
   height: 1rem;
   width: 1rem;
-  top: -0.3rem;
+  top: -0.3em;
   left: -2.6rem;
   padding: 0.6rem 0.6rem;
   border-radius: 50%;
