--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -489,7 +489,14 @@
     transition: all 0.2s ease-in-out;
 }
 
-
 .blog-content img{
-    width: 100%;
+    width:100%;
+    margin-top: 2.5%;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.1)
+}
+
+.blog-content img + em{
+    width: 95%;
+    margin: 2.5%;
+    margin-top: 0px;
 }
