minor style changes

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -17,7 +17,7 @@
             <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
 
             <!-- FONT AWESOME ICONS -->
-            <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
+            <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
 
             <!-- CUSTOM JS -->
             <script src="{% static 'js/byite.js' %}"></script>
