minor style changes

--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -1,6 +1,6 @@
 body{
     font-family:'raleway', 'roboto', sans-serif;
-    font-display: optional;
+    font-display: block;
     color: $dark-grey;
  }
 
