--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -1,6 +1,22 @@
+// Import fonts
+//@import url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,700");
+//@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
+//@import url("https://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
+
+@font-family{
+    font-family: raleway;
+    font-display: block;
+    src: url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,700");
+}
+@font-family{
+    font-family: roboto;
+    font-display: block;
+    src: url("https://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
+}
+
+
 body{
     font-family:'raleway', 'roboto', sans-serif;
-    font-display: block;
     color: $dark-grey;
  }
 
