--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -5,12 +5,12 @@
 
 @font-family{
     font-family: raleway;
-    font-display: fallback;
+    font-display: swap;
     src: url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,700");
 }
 @font-family{
     font-family: roboto;
-    font-display: fallback;
+    font-display: swap;
     src: url("https://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
 }
 
