Updated typography to include font-display property

--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -1,6 +1,9 @@
 // Import fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap");
+
+//FONTS ARE LOADED IN BASE .HTML//
+
+//@import url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,700&display=swap");
+//@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap");
 //@import url("https://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
 
 
