--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -16,6 +16,10 @@
             <!-- CUSTOM STYLES -->
             <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
 
+            <!-- CUSTOM FONTS -->
+            <link defer src="https://fonts.googleapis.com/css?family=Raleway:400,300,500,700&display=swap"/>
+            <link defer src="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap"/>
+            
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
 
