--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -18,7 +18,7 @@
 
             <!-- CUSTOM FONTS -->
             <link src="https://fonts.googleapis.com/css?family=Raleway:400,300,500,700&display=swap" rel="stylesheet"/>
-            <link src="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet"/>
+            <link src="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700display=swap" rel="stylesheet"/>
 
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
