--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,15 +13,15 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
 
-            <!-- CUSTOM STYLES -->
-            <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
-
             <!-- CUSTOM FONTS -->
-            <link src="https://fonts.googleapis.com/css?family=Raleway:400,300,500,700&display=swap" rel="stylesheet"/>
-            <link src="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700display=swap" rel="stylesheet"/>
+            <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
+            <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
 
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
+
+            <!-- CUSTOM STYLES -->
+            <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
 
             <!-- CUSTOM JS -->
             <script src="{% static 'js/byite.js' %}"></script>
