--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -14,8 +14,8 @@
             <meta name="theme-color" content="#ffffff">
 
             <!-- CUSTOM FONTS -->
-            <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
-            <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
+            <link defer href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
+            <link defer href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
 
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
