Updated typography to include font-display property

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -14,8 +14,11 @@
             <meta name="theme-color" content="#ffffff">
 
             <!-- CUSTOM FONTS -->
-            <link defer href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
-            <link defer href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" rel="stylesheet"/>
+            <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+            <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap"></noscript>
+            <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+            <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap"></noscript>
+
 
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
