--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -6,6 +6,7 @@ $yellow: #ffcf7b;
 $accent: #111;
 $very-light-grey: #F2F2F2;
 $light-grey: #aeb2bf;
+$medium-grey: #9498a5;
 $grey: #6b6d74;
 $dark-grey: #383a42;
 $very-dark-grey: #1d1e21;
