--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -19,12 +19,14 @@
             <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
             <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700&display=swap"></noscript>
 
-
             <!-- FONT AWESOME ICONS -->
             <script defer src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
 
             <!-- CUSTOM STYLES -->
             <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
+
+            <!-- jQuery -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
             <!-- CUSTOM JS -->
             <script src="{% static 'js/byite.js' %}"></script>
