--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -291,9 +291,12 @@
     }
 }
 
-.blog-highlight small{
-    margin-top: .4rem;
-    padding-top: .5rem;
+.blog-card-highlight{
+    position:relative;
+    margin-top:1.2rem;
+    margin-left:1.2rem;
+    min-height:8rem;
+    box-shadow: -2px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
 .blog-card{
