--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="blog-list-header-container page page-padded flex-y">
-    <div class="blog-header w-100 m-t-xxl m-b-xxl">
+    <div class="blog-header w-100 m-t-xxl">
         <div class="center-content-y center-content-xy-sm">
             <div class="text-center-sm">
                 <h1 class="no-m color-white">Recent blogs</h1>
@@ -16,7 +16,7 @@
         </div>
         <div class="col-2 col-1-sm m-t-xxl">
             {% if blogs|length > 0 %}
-            <a class="m-b-xl" href="{% url 'blog-detail' blogs.0.slug %}">
+            <a class="m-b-xxl" href="{% url 'blog-detail' blogs.0.slug %}">
                 <div class="blog-highlight color-white w-100 no-p">
                     <div class="blog-card-highlight">
                         <div class="blog-card-img-container center-content-xy">
