--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -68,6 +68,15 @@
                                 </svg>
                             </div>
                         </div>
+                        <!--
+                        <div class="menu" id="hamburger">
+                            <div class="menu_line menu_line-q"></div>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="-5 -5 110 110">
+                                <path class="path-a" d="M 0 0 h 100 a 14 14 0 0 1 0 100 l -100 -100" />
+                                <path class="path-a" d="M 100 100 h -100 a 14 14 0 0 1 0 -100 l 100 100" />
+                            </svg>
+                        </div>
+                        -->
                     </div>
                 </div>
             </div>
